# cameltv-test-platform

./: .gitignore  .gitmodules  .mcp.json  .pr-body-batch20.md  .pr-body-batch22.md  AGENTS.md  C-CONDITIONS.md  CLAUDE.md  COMMANDS.md  CamelTv-测试自动化平台-建设方案.md  Jenkinsfile  package-lock.json  test-测试平台设计方案.md  测试平台-前后端分离重构方案.md  知识中心-用户使用手册.md  知识库.md
test-platform/: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMMANDS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
test-platform/cli/: __init__.py  tp.py
test-platform/config/: platform.yaml  project.yaml
test-platform/config/environments/: prod.yaml  test.yaml
test-platform/config/schema/: env.schema.json  site.schema.json
test-platform/core/: __init__.py  config_loader.py  http_client.py  logging.py  models.py  recording.py
test-platform/data/: datafactory-t_user.json  prod_api_capture.json
test-platform/docker/: api-server.Dockerfile  nginx.conf  web-ui.Dockerfile
test-platform/docker/wiremock/: docker-compose.yml
test-platform/platform_tests/: test_config_loader.py
test-platform/scripts/: ci-entrypoint.ps1
test-platform/server/: dependencies.py  main.py  models.py  store.py  task_store.py
test-platform/server/routes/: api_test.py  config.py  datafactory.py  envcheck.py  report.py  task_history.py  test_cases.py  test_plans.py  ui_auto.py  workspace.py
test-platform/tools/: __init__.py
test-platform/tools/api_diff/: __init__.py
test-platform/tools/api_tester/: __init__.py  (+6 more)
test-platform/web-ui/: index.html  package-lock.json  package.json
(+1078 files in other folders)
